# resolve_structure

./: .gitignore  ResolveStructure  ResolveStructure.cabal
src/: Main.hs
